--- a/templates/login.html
+++ b/templates/login.html
@@ -56,18 +56,35 @@
 
 <style>
 .loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
-  border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  animation: spin 2s linear infinite;
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -70px;
+    margin-left: -70px;
+
+
 }
 
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+.center{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: 200px;
+    margin-left: -40px;
+    width: 120px;
+    height: 120px;
+}
+
 </style>
 
 <script>
@@ -121,6 +138,7 @@
 
 
 </script>
-<div class="loader"></div> 로그인하는중..
+<div class="loader"></div>
+<div class="center">로그인하는중..</div>
 </body>
 </html>
