--- a/templates/success.html
+++ b/templates/success.html
@@ -14,7 +14,7 @@ swal({
     title: "주문이 접수되었습니다!",
     text: st,
     icon: "success",
-    buttons: ["홈으로 돌아가기"],
+    buttons: {confirm:"홈으로 돌아가기"},
     closeOnClickOutside: false,
     closeOnEsc: false,
 }).then((YES) => {
