feat: OpenGraph Support

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,11 @@
 </script>
 <html>
   <head>
-    <link rel="shortcut icon" href="assets/images/favicon.ico" />
+    <link rel="shortcut icon" href="assets/favicon.ico" />
     <title>{{store_title}}</title>
     <meta charset="utf-8" />
-    <meta property="og:image" content="" />
-    <meta property="og:description" content="설명" />
+    <meta property="og:image" content="{{store_logo}}" />
+    <meta property="og:description" content="{{store_description}}" />
     <meta property="og:title" content="{{store_title}}" />
     <meta
       name="viewport"
