--- a/templates/login.html
+++ b/templates/login.html
@@ -2,11 +2,16 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
+    <link rel="shortcut icon" href="assets/favicon.ico" />
+    <title>LOGIN: {{store_title}}</title>
+    <meta charset="utf-8" />
+    <meta property="og:image" content="{{store_logo}}" />
+    <meta property="og:description" content="{{store_description}}" />
+    <meta property="og:title" content="LOGIN: {{store_title}}" />
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"
     />
-    <title>LOGIN</title>
     <script src="../assets/js/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
 
