--- a/templates/success.html
+++ b/templates/success.html
@@ -7,7 +7,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css"
     />
-    <title>Debonair Candle</title>
+    <link rel="shortcut icon" href="assets/favicon.ico" />
+    <title>SUCCESS: {{store_title}}</title>
+    <meta charset="utf-8" />
+    <meta property="og:image" content="{{store_logo}}" />
+    <meta property="og:description" content="{{store_description}}" />
+    <meta property="og:title" content="SUCCESS: {{store_title}}" />
   </head>
   <body>
     <script>
