fix: viewport error

--- a/templates/success.html
+++ b/templates/success.html
@@ -10,6 +10,10 @@
     <link rel="shortcut icon" href="assets/favicon.ico" />
     <title>SUCCESS: {{store_title}}</title>
     <meta charset="utf-8" />
+      <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"
+    />
     <meta property="og:image" content="{{store_logo}}" />
     <meta property="og:description" content="{{store_description}}" />
     <meta property="og:title" content="SUCCESS: {{store_title}}" />
