feat: support for two OAuth Provider at once

--- a/templates/index.html
+++ b/templates/index.html
@@ -180,6 +180,7 @@
                   var photoURL = data["photoURL"];
                   var nickname = data["nickname"];
                   var usertag = data["usertag"];
+                  var OauthProvider = data['OauthProvider']
                   console.log(photoURL);
                   console.log(nickname);
                   console.log(usertag);
@@ -188,7 +189,7 @@
                     '<img class="circle" src="" id="profilepic"/>' +
                     nickname +
                     "님 반갑습니다.<br>" +
-                    "{{OauthProvider}}: " +
+                    "OauthProvider: " +
                     usertag +
                     "로 로그인됨";
                   document.getElementById("profilepic").src = photoURL;
