feat: supporting two OAuth at once -> change config file

--- a/templates/index.html
+++ b/templates/index.html
@@ -189,7 +189,7 @@
                     '<img class="circle" src="" id="profilepic"/>' +
                     nickname +
                     "님 반갑습니다.<br>" +
-                    "OauthProvider: " +
+                    OauthProvider+": "+
                     usertag +
                     "로 로그인됨";
                   document.getElementById("profilepic").src = photoURL;
