--- a/templates/success.html
+++ b/templates/success.html
@@ -50,11 +50,11 @@
         title: "주문이 접수되었습니다!",
         text: st,
         icon: "success",
-        buttons: { confirm: "홈으로 돌아가기" },
+        buttons: { confirm: "돌아가기" },
         closeOnClickOutside: false,
         closeOnEsc: false,
       }).then((YES) => {
-        window.location.href = window.location.origin;
+        window.history.back();
       });
     </script>
   </body>
