--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,10 @@
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
 
     <script>
+        function profileresize(obj){
+  obj.height = 48;
+  obj.width = 48;
+}
       // Your web app's Firebase configuration
       // For Firebase JS SDK v7.20.0 and later, measurementId is optional
       var firebaseConfig = {
@@ -189,10 +193,18 @@
                   console.log(nickname);
                   console.log(usertag);
                   window.nickname = nickname;
+
+
+
+
+
+                    a='javascript:fitImageSize(this, '+photoURL+', 48, 48)'
+
+
                   document.getElementById("userinfo").innerHTML =
-                    '<img class="circle" src="" id="profilepic"/>' + nickname + "님 반갑습니다.<br>" +
+                    '<img class="circle" src="'+photoURL+'" onload="javascript:profileresize(this);" id="profilepic" />' + nickname + "님 반갑습니다.<br>" +
                     OauthProvider+": "+ usertag + "로 로그인됨"+modspecial;
-                  document.getElementById("profilepic").src = photoURL;
+
                 } else {
                   window.location.href = window.location.origin + "/";
                 }
