--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
       name="viewport"
       content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"
     />
-    <script src="../assets/js/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
 
     <!-- TODO: Add SDKs for Firebase products that you want to use
