--- a/assets/main.css
+++ b/assets/main.css
@@ -1,6 +1,19 @@
-@import url(fontawesome-all.min.css);
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700,900");
-@font-face { font-family: 'Cafe24Oneprettynight'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.1/Cafe24Oneprettynight.woff') format('woff'); font-weight: normal; font-style: normal; } 
+@font-face { font-family: 'Cafe24Oneprettynight'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.1/Cafe24Oneprettynight.woff') format('woff'); font-weight: normal; font-style: normal; }
+
+
+
+
+
+@font-face {
+    font-family: 'MaplestoryOTFLight';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/MaplestoryOTFLight.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
 
 
 html, body, div, span, applet, object,
@@ -121,11 +134,12 @@ body.is-preload .tiles article {
 	body, input, select, textarea {
 		color: #585858;
 		/*font-family: "Source Sans Pro", Helvetica, sans-serif;*/
-		font-family: 'Cafe24Oneprettynight', Helvetica, sans-serif;
+		font-family: 'MaplestoryOTFLight', Helvetica, sans-serif;
 		font-size: 16pt;
 		font-weight: 300;
 		line-height: 1.75;
 	}
+
 
 		@media screen and (max-width: 1680px) {
 
@@ -2622,7 +2636,7 @@ body.is-preload .tiles article {
 					height: 100%;
 					opacity: 1.0;
 					z-index: 1;
-					opacity: 0.8;
+					opacity: 0.3;
 				}
 
 				.tiles article > .image:after {
@@ -2638,7 +2652,7 @@ body.is-preload .tiles article {
 					left: 0;
 					width: 100%;
 					height: 100%;
-					background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 0.25px%3B stroke: %23ffffff%3B %7D%3C/style%3E%3Cline x1='0' y1='0' x2='100' y2='100' /%3E%3Cline x1='100' y1='0' x2='0' y2='100' /%3E%3C/svg%3E");
+					/*background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 0.25px%3B stroke: %23ffffff%3B %7D%3C/style%3E%3Cline x1='0' y1='0' x2='100' y2='100' /%3E%3Cline x1='100' y1='0' x2='0' y2='100' /%3E%3C/svg%3E");*/
 					background-position: center;
 					background-repeat: no-repeat;
 					background-size: 100% 100%;
@@ -2710,27 +2724,34 @@ body.is-preload .tiles article {
 					}
 
 			.tiles article.style1 > .image:before {
-				background-color: #f2849e;
+				/*background-color: #f2849e;*/
+                background-color: dimgray;
+
 			}
 
 			.tiles article.style2 > .image:before {
-				background-color: #7ecaf6;
+				/*background-color: #7ecaf6;*/
+                background-color: dimgray;
 			}
 
 			.tiles article.style3 > .image:before {
-				background-color: #7bd0c1;
+				/*background-color: #7bd0c1;*/
+                background-color: dimgray;
 			}
 
 			.tiles article.style4 > .image:before {
-				background-color: #c75b9b;
+				/*background-color: #c75b9b;*/
+                background-color: dimgray;
 			}
 
 			.tiles article.style5 > .image:before {
-				background-color: #ae85ca;
+				/*background-color: #ae85ca;*/
+                background-color: dimgray;
 			}
 
 			.tiles article.style6 > .image:before {
-				background-color: #8499e7;
+				/*background-color: #8499e7;*/
+                background-color: dimgray;
 			}
 
 			body:not(.is-touch) .tiles article:hover > .image {
@@ -3331,4 +3352,3 @@ body.is-preload .tiles article {
 			}
 
 		}
-	
